--- a/.github/workflows/securitycodescan-analysis.yml
+++ b/.github/workflows/securitycodescan-analysis.yml
@@ -136,7 +136,7 @@ jobs:
         
       - name: Build
         working-directory: dotnet4.5.2
-        run: msbuild LongRuningLegacy.sln /p:Configuration=Release
+        run: msbuild LongRunningLegacy.sln /p:Configuration=Release
 
       - name: Convert sarif for uploading to GitHub
         uses: security-code-scan/security-code-scan-results-action@main
