--- a/.github/workflows/securitycodescan-analysis.yml
+++ b/.github/workflows/securitycodescan-analysis.yml
@@ -136,10 +136,10 @@ jobs:
       
       - name: Restore
         working-directory: dotnet4.5.2
-        run: dotnet restore LongRunningLegacy.sln
+        run: nuget restore -SolutionDirectory .
       - name: Build
         working-directory: dotnet4.5.2
-        run: msbuild LongRunningLegacy.sln /p:Configuration=Release
+        run: msbuild /p:Configuration=Release
 
       - name: Convert sarif for uploading to GitHub
         uses: security-code-scan/security-code-scan-results-action@main
