--- a/.github/workflows/securitycodescan-analysis.yml
+++ b/.github/workflows/securitycodescan-analysis.yml
@@ -148,7 +148,7 @@ jobs:
         run: |
           cd dotnet4.5.2
           dotnet tool install --global Sarif.Multitool --version 2.3.10
-          outputDir="../results"
+          outputDir="../../results"
           mkdir $outputDir
 
           cat << EOF > convert.js
