--- a/.github/workflows/securitycodescan-analysis.yml
+++ b/.github/workflows/securitycodescan-analysis.yml
@@ -19,6 +19,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: nuget/setup-nuget@v1.0.5
       - uses: microsoft/setup-msbuild@v1.0.2
+        with:
+          vs-version: 16.5
              
       - name: Set up projects for analysis
         #uses: security-code-scan/security-code-scan-add-action@main
