--- a/.github/workflows/securitycodescan-analysis.yml
+++ b/.github/workflows/securitycodescan-analysis.yml
@@ -19,8 +19,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: nuget/setup-nuget@v1.0.5
       - uses: microsoft/setup-msbuild@v1.0.2
-        with:
-          vs-version: 14.0
+
              
       - name: Set up projects for analysis
         #uses: security-code-scan/security-code-scan-add-action@main
@@ -28,8 +27,8 @@ jobs:
         run: |
           cd dotnet4.5.2
           $ErrorActionPreference = "Stop";
-          [string]$SecurityCodeScanPackageName = 'SecurityCodeScan.VS2017'
-          [string]$SecurityCodeScanPackageVersion = '3.0.0'
+          [string]$SecurityCodeScanPackageName = 'SecurityCodeScan.VS2019'
+          [string]$SecurityCodeScanPackageVersion = '5.1.0'
           [string]$SecurityCodeScanPackagePath = $null
           
           foreach ($projectFile in Get-ChildItem -Path . -Include *.csproj, *.vbproj -File -Recurse -Force) {
@@ -108,6 +107,11 @@ jobs:
               $analyzer = $project.CreateElement('Analyzer', $project.Project.NamespaceURI)
               $analyzerInclude = $project.CreateAttribute('Include')
               $analyzerInclude.Value = Join-Path -Path $SecurityCodeScanPackagePath -ChildPath "$($SecurityCodeScanPackageName).$($SecurityCodeScanPackageVersion)\analyzers\dotnet\$($SecurityCodeScanPackageName).dll"
+              $analyzer.Attributes.Append($analyzerInclude) | Out-Null
+              $itemGroup.AppendChild($analyzer) | Out-Null
+              $analyzer = $project.CreateElement('Analyzer', $project.Project.NamespaceURI)
+              $analyzerInclude = $project.CreateAttribute('Include')
+              $analyzerInclude.Value = Join-Path -Path $SecurityCodeScanPackagePath -ChildPath "$($SecurityCodeScanPackageName).$($SecurityCodeScanPackageVersion)\analyzers\dotnet\YamlDotNet.dll"
               $analyzer.Attributes.Append($analyzerInclude) | Out-Null
               $itemGroup.AppendChild($analyzer) | Out-Null
               $project.Project.AppendChild($itemGroup) | Out-Null
