--- a/dotnet4.5.2/LongRunningLegacy/Areas/HelpPage/Views/Web.config
+++ b/dotnet4.5.2/LongRunningLegacy/Areas/HelpPage/Views/Web.config
@@ -38,4 +38,9 @@
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
     </handlers>
   </system.webServer>
+  <httpProtocol>
+      <customHeaders>
+        <add name="X-Frame-Options" value="SAMEORIGIN" />
+      </customHeaders>
+  </httpProtocol>
 </configuration>
