--- a/dotnet4.5.2/LongRunningLegacy/Areas/HelpPage/Views/Web.config
+++ b/dotnet4.5.2/LongRunningLegacy/Areas/HelpPage/Views/Web.config
@@ -30,6 +30,7 @@
         <add assembly="System.Net.Http, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
       </assemblies>
     </compilation>
+	<pages  viewStateEncryptionMode="Always" />
   </system.web>
 
   <system.webServer>
