--- a/dotnet4.5.2/LongRunningLegacy/Views/Web.config
+++ b/dotnet4.5.2/LongRunningLegacy/Views/Web.config
@@ -39,6 +39,7 @@
   </system.webServer>
 
   <system.web>
+	<pages  viewStateEncryptionMode="Always" />
     <compilation>
       <assemblies>
         <add assembly="System.Web.Mvc, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
